<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_picture"
            android:src="@mipmap/ic_launcher"
            android:title="@string/profile_picture" />
        <item
            android:id="@+id/nav_personal_trainer"
            android:src="@mipmap/ic_launcher"
            android:title="@string/personal_trainer" />
        <item
            android:id="@+id/nav_fitness_class"
            android:src="@mipmap/ic_launcher"
            android:title="@string/fitness_class" />

        <item
            android:id="@+id/nav_messages"
            android:src="@mipmap/ic_launcher"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_goals"
            android:src="@mipmap/ic_launcher"
            android:title="@string/goals" />

        <item
            android:id="@+id/nav_payments"
            android:src="@mipmap/ic_launcher"
            android:title="@string/payment" />

        <item
            android:id="@+id/nav_history"
            android:src="@mipmap/ic_launcher"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_settings"
            android:src="@mipmap/ic_launcher"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_help"
            android:src="@mipmap/ic_launcher"
            android:title="@string/help" />
    </group>
</menu>