<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/distance_from"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_to"
                />
            <EditText
                android:id="@+id/distance_to"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/distance_unit"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_trainer"
            />
        <ToggleButton
            android:layout_alignParentRight="true"
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <CheckBox
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="false"
            />
        <CheckBox
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:checked="false"
            />
        <CheckBox
            android:id="@+id/none"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:checked="false"
            />
    </LinearLayout>

    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        />

    <Button
        android:id="@+id/filter_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:background="@color/violet"
        android:textColor="@color/white"
        />
</LinearLayout>