<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        >
        <ImageView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"
            />
        <TextView
            android:textSize="@dimen/header_text_size"
            android:padding="5dp"
            android:id="@+id/agreement_text"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aggreement_text"
            />
        <LinearLayout
            android:layout_below="@id/agreement_text"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <TextView
                android:textStyle="bold"
                android:padding="2dp"
                android:textSize="@dimen/header_text_size"
                android:id="@+id/terms_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_services"
                />
            <TextView
                android:textSize="@dimen/header_text_size"
                android:padding="2dp"
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_or"
                />
            <TextView
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/policy"
                />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:textSize="@dimen/header_text_size"
        android:id="@+id/registration"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:background="@color/violet"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        />

</LinearLayout>