<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@android:color/white"
        >
        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"
            />
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="@dimen/header_text_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                />
            <EditText
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="@dimen/header_text_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/password"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType = "textPassword"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:padding="@dimen/text_view_padding"
            android:background="@color/light_gray"
            />

        <TextView
            android:padding="10dp"
            android:textSize="@dimen/header_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_or"
            android:layout_margin="@dimen/text_view_margin"
            android:gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <Button
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />
            <Button
                android:id="@+id/linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linkedin"
                android:padding="@dimen/text_view_padding"
                android:layout_marginLeft="@dimen/text_view_margin"
                />
        </LinearLayout>

        <TextView
            android:textColorLink="@android:color/black"
            android:textSize="@dimen/header_text_size"
            android:layout_margin="10dp"
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donot_have_account"
            />


    </LinearLayout>
</ScrollView>