<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="@dimen/header_text_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/name"
                />
            <EditText
                android:textSize="@dimen/header_text_size"
                android:id="@+id/name"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/city_layout"
            android:layout_below="@id/name_layout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="@dimen/header_text_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/city"
                />
            <EditText
                android:textSize="@dimen/header_text_size"
                android:id="@+id/city"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/user_name_layout"
            android:layout_below="@+id/city_layout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="@dimen/header_text_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                />
            <EditText
                android:textSize="@dimen/header_text_size"
                android:id="@+id/user_name"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/password_layout"
            android:layout_below="@+id/user_name_layout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="@dimen/header_text_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/password"
                />
            <EditText
                android:textSize="@dimen/header_text_size"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/goal_layout"
            android:layout_below="@+id/password_layout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="@dimen/header_text_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/goals"
                />
            <Spinner
                android:textSize="@dimen/header_text_size"
                android:id="@+id/goal"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/trainer_layout"
            android:layout_below="@+id/goal_layout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="@dimen/header_text_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/trainer_preference"
                />
            <Spinner
                android:textSize="@dimen/header_text_size"
                android:id="@+id/trainer"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <include
            android:id="@+id/client_footer"
            layout="@layout/registration_footer"
            android:layout_width="match_parent"
            android:layout_below="@id/trainer_layout"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
    </RelativeLayout>
</ScrollView>

